# galvyn

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build-and-test.yml
contrib/galvyn-contrib-auth/: Cargo.toml
contrib/galvyn-contrib-auth/src/: lib.rs  models.rs  module.rs  utils.rs
contrib/galvyn-contrib-auth/src/handler/: local.rs  mod.rs  oidc.rs  schema.rs
contrib/galvyn-contrib-auth/src/handler/core/: handler.rs
contrib/galvyn-contrib-auth/src/handler/local/: handler.rs  mod.rs  schema.rs
contrib/galvyn-contrib-auth/src/handler/oidc/: handler.rs  schema.rs
contrib/galvyn-contrib-auth/src/logic/: mod.rs  oidc.rs
contrib/galvyn-contrib-oauth/: Cargo.toml
contrib/galvyn-contrib-oauth/src/: models.rs  module.rs  setup.rs
contrib/galvyn-contrib-oauth/src/handler/: error.rs  mod.rs  schema.rs
contrib/galvyn-contrib-settings/: Cargo.toml
contrib/galvyn-contrib-settings/src/: application_settings.rs  lib.rs  model.rs  settings_store.rs
contrib/galvyn-contrib-timers/: Cargo.toml
contrib/galvyn-contrib-timers/src/: errors.rs  lib.rs  module.rs  setup.rs  state.rs
contrib/galvyn-contrib-tracing/: Cargo.toml
contrib/galvyn-contrib-tracing/src/: lib.rs
example/blog/: Cargo.toml
example/blog/src/: auth_models.rs  cli.rs  main.rs  settings.rs
example/mannequin/webserver/: Cargo.toml
example/mannequin/webserver/src/: cli.rs  config.rs  main.rs
example/mannequin/webserver/src/global/: mod.rs
galvyn/: Cargo.toml
galvyn-cli/: Cargo.toml
galvyn-cli/src/: cli.rs  commands.rs  main.rs  output.rs
galvyn-cli/templates/crate/: Cargo.toml
galvyn-cli/templates/crate/src/: cli.rs  main.rs
galvyn-cli/templates/module/: mod.rs
galvyn-core/: Cargo.toml
galvyn-core/src/: lib.rs  middleware.rs  router.rs  schema_generator.rs  schemaless_json.rs  session.rs
galvyn-core/src/handler/: context.rs  impls.rs  mod.rs  request_body.rs  request_part.rs  response_body.rs  response_part.rs
galvyn-core/src/macro_utils/: mod.rs  test_trait.rs
galvyn-core/src/middleware/: catch_unwind.rs  concurrency_limit.rs  mod.rs
galvyn-core/src/misc/: mod.rs  serde_env.rs  serde_parse.rs
galvyn-core/src/misc/either/: futures_stream.rs  mod.rs  std_future.rs  std_io.rs  std_iter.rs  std_pin.rs  tokio_io.rs
galvyn-core/src/misc/sync/: mod.rs  swap_lock.rs  typed_semaphore.rs
galvyn-core/src/module/: mod.rs
galvyn-core/src/module/impls/: database.rs  mod.rs
galvyn-core/src/module/registry/: builder.rs  dependencies.rs  mod.rs  module_set.rs
galvyn-core/src/modules/: database.rs  mod.rs  shutdown.rs
galvyn-core/src/router/: metadata.rs  mod.rs
galvyn-core/src/stuff/: api_error.rs  api_json.rs  catch_unwind.rs  env.rs  mod.rs  redacted.rs  schema.rs  swap_lock.rs
galvyn-core/src/stuff/api_error/: aggregator.rs  core.rs  mod.rs
galvyn-macros/: Cargo.toml
galvyn-macros/src/: lib.rs
galvyn-macros/src/handler/: mod.rs
galvyn/src/: contrib.rs  error.rs  galvyn.rs  graceful_shutdown.rs  lib.rs  macro_docs.rs  openapi.rs  panic_hook.rs  tracing.rs
galvyn/src/openapi/: generate.rs  metadata.rs  mod.rs  router_ext.rs
galvyn/src/tracing/: extensions.rs  mod.rs  opentelemetry.rs  otel.rs
swaggapi/: Cargo.toml
swaggapi/src/: context.rs  handler.rs  lib.rs  page.rs  router.rs  schema_generator.rs
swaggapi/src/handler/: impls.rs  mod.rs  request_body.rs  request_part.rs  response_body.rs  response_part.rs
swaggapi/src/handler_argument/: impls.rs  mod.rs
swaggapi/src/internals/: ptrset.rs
