[workspace]
resolver = "2"
members = [
    "./galvyn",
    "./galvyn-cli",
    "./galvyn-macros",
    "./galvyn-core",
    "./contrib/galvyn-contrib-auth",
    "./contrib/galvyn-contrib-oauth",
    "./contrib/galvyn-contrib-settings",
    "./example/blog",
]

[workspace.dependencies]
axum = { version = "~0.8", default-features = false }
rorm = { version = "~0.8", default-features = false }
rorm-macro-impl = { version = "~0.10" }
tokio = { version = ">=1.44.2", default-features = false }
schemars = { version = "~0.8", default-features = false }

# Opentelemtry
tracing-opentelemetry = { version = "0.25" }
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17" }
