[workspace]
resolver = "2"
members = [
    "./galvyn",
    "./galvyn-cli",
    "./galvyn-macros",
    "./galvyn-core",
    "./contrib/galvyn-contrib-auth",
    "./contrib/galvyn-contrib-oauth",
    "./contrib/galvyn-contrib-settings",
    "./contrib/galvyn-contrib-timers",
    "./example/blog",
]

[workspace.dependencies]
axum = { version = "~0.8", default-features = false }
rorm = { version = "~0.9", default-features = false }
rorm-macro-impl = { version = "~0.10" }
tokio = { version = ">=1.44.2", default-features = false }
schemars = { version = "~0.8", default-features = false }

# Opentelemtry
tracing-opentelemetry = { version = "~0.32" }
opentelemetry = { version = "~0.31" }
opentelemetry_sdk = { version = "~0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "~0.31", features = ["grpc-tonic"] }
