[package]
name = "galvyn"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"
description = "Core-component for the galvyn web-framework"

[dependencies]
# Webserver
axum = { workspace = true, default-features = false, features = ["tokio", "http1"] }

# Core
galvyn-core = { version = "~0.1", path = "../galvyn-core" }

# Contrib modules
# galvyn-contrib-tracing = { version = "~0.1", path = "../contrib/galvyn-contrib-tracing", optional = true }
galvyn-contrib-auth = { version = "~0.1", path = "../contrib/galvyn-contrib-auth", optional = true }

# Error handling
thiserror = { version = "~2" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["net"] }

# Tracing
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }

galvyn-macros = { version = "0.2.0", path = "../galvyn-macros" }
openapiv3 = { version = "~2", optional = true }
serde_json = { version = "~1", optional = true }

[features]
contrib = [
    # "dep:galvyn-contrib-tracing",
    "dep:galvyn-contrib-auth",
]
openapi = [
    "dep:openapiv3",
    "serde_json"
]