[package]
name = "galvyn"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"
description = "Core-component for the galvyn web-framework"

[dependencies]
# Webserver
axum = { workspace = true, default-features = false, features = ["tokio", "http1"] }

# Core
galvyn-core = { version = "~0.1", path = "../galvyn-core" }

# Contrib modules
# galvyn-contrib-tracing = { version = "~0.1", path = "../contrib/galvyn-contrib-tracing", optional = true }
galvyn-contrib-auth = { version = "~0.1", path = "../contrib/galvyn-contrib-auth", optional = true }

# Error handling
thiserror = { version = "~2" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["net"] }

# The basic async traits (Future, Stream, AsyncRead, ...) and extensions for them
futures-lite = { version = "~2", default-features = false, features = ["alloc"] }

# Tracing
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }

galvyn-macros = { version = "0.2.0", path = "../galvyn-macros" }
openapiv3 = { version = "~2", optional = true }
serde_json = { version = "~1", optional = true }

# Unix signal handling
signal-hook = { version = "~0.3", optional = true }
signal-hook-tokio = { version = "~0.3", features = ["futures-v0_3"], optional = true }

[features]
default = [
    "openapi",
    "graceful-shutdown",
]
contrib = [
    # "dep:galvyn-contrib-tracing",
    "dep:galvyn-contrib-auth",
]
openapi = [
    "dep:openapiv3",
    "serde_json"
]
# Enables a graceful shutdown upon receiving a termination signal
graceful-shutdown = ["dep:signal-hook", "dep:signal-hook-tokio"]