[package]
name = "galvyn-contrib-oauth"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
description = "OAuth provider for galvyn"

[package.metadata.docs.rs]
features = ["rorm/postgres-only", ]

[dependencies]
galvyn-core = { version = "~0.3", path = "../../galvyn-core", default-features = false, features = ["rorm"] }
galvyn-macros = { version = "~0.3", path = "../../galvyn-macros" }

rorm = { workspace = true, features = ["uuid"] }

tracing = { version = "~0.1" }

# Url builder and parser
url = { version = "~2" }
serde_urlencoded = { version = "~0.7" }

# Serialization support
serde = { version = "~1", features = ["derive"] }
schemars = { version = "~0.8" }