[package]
name = "galvyn-contrib-oauth"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
description = "OAuth provider for galvyn"

[package.metadata.docs.rs]
features = ["rorm/postgres-only", ]

[dependencies]
galvyn-core = { workspace = true, features = ["rorm"] }
galvyn-macros = { workspace = true }

rorm = { workspace = true, features = ["uuid"] }

tracing = { workspace = true }

# Url builder and parser
url = { workspace = true }
serde_urlencoded = { version = "~0.7" }

# Serialization support
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
