[package]
name = "galvyn-contrib-settings"
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"

[package.metadata.docs.rs]
features = ["rorm/postgres-only", ]

[dependencies]
galvyn-core = { version = "~0.3", path = "../../galvyn-core", default-features = false, features = ["rorm"] }
rorm = { workspace = true, features = ["uuid"] }
thiserror = { version = "~2" }
tokio = { workspace = true, features = ["sync"] }