[package]
name = "galvyn-contrib-settings"
version = "0.4.0"
edition = "2024"
license = "MPL-2.0"
description = "Dynamic settings for galvyn"

[package.metadata.docs.rs]
features = ["rorm/postgres-only", ]

[dependencies]
galvyn-core = { workspace = true, features = ["rorm"] }
rorm = { workspace = true, features = ["uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
