[package]
name = "galvyn-contrib-tracing"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Niklas Pfister <git@omikron.dev>"]
description = "Tracing feature for galvyn"

[dependencies]
# Galvyn core
galvyn-core = { version = "~0.1", path = "../../galvyn-core" }

# tower
tower-http = { version = "~0.6", features = ["trace"] }

# Tracing
tracing = { version = "~0.1" }